Melhorando o código